css/style.css
body {
    font-family: Helvetica, Arial, sans-serif;
    padding: 5% 10%;
    background-color: #f4f4f5;
    line-height: 1.5;
    color: #333;
    margin: 0 auto;
}

.container {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1;
}

@media (max-width: 600px) {
    body {
        padding: 10%;
        max-width: 90%;
    }
}

h1,
h2,
h3 {
    font-family: Georgia, serif;
    margin-top: 1em;
    margin-bottom: 0.8em;
    color: #222;
}

h1 {
    font-weight: bold;
}

p {
    font-size: 1.2em;
    margin-top: 0.4em;
    margin-bottom: 0.8em;
    line-height: 1.5;
}

li {
    font-size: 1.2em;
    margin-bottom: 0.2em;
}

ul {
    margin-bottom: 0.6em;
    padding-left: 1.2em;
}

a {
    color: #0066cc;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

a:visited {
    color: #8b5cf6;
}

iframe {
    display: block;
    margin: 1.5em auto;
    max-width: 100%;
    border: 0;
}

.gallery {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-auto-rows: auto;
    grid-auto-flow: dense;
    gap: 0.4em;
}

@media (max-width: 1024px) {
    .gallery {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 600px) {
    .gallery {
        grid-template-columns: 1fr;
    }
}

img {
    width: 100%;
    height: auto;
    object-fit: cover;
}

/* Top navigation menu */

nav {
    display: flex;
    align-items: center;
}

.menu ul {
    list-style-type: none;
    display: flex;
    padding: 0;
    width: auto;
}

.menu li {
    border: 1px solid white;
    background-color: #333;
}

.menu a {
    display: block;
    padding: .5em 1em;
    color: white;
    text-decoration: none;
    text-align: center;
    border: 1px solid white;
    white-space: nowrap;
}

.menu a:hover {
    background-color: #575757;
}

.hamburger {
    display: none;
}

.brand-name {
    font-size: 2em;
    font-family: Georgia, serif;
    color: #3b0764;
    margin: 0;
    text-align: center;
    padding-right: 1em;
    white-space: nowrap;
}

/* To make brand name and nav sit next to each other on screens larger than mobile */
@media (min-width: 600px) {
    .brand-nav-container {
        display: flex;
        align-items: center;
    }
}

/* Top nav for mobile */

@media (max-width: 600px) {

    .menu ul {
        flex-direction: column;
        display: none;
    }

    .menu li {
        margin: 0;
        width: 100%;
        font-size: 1em;
    }

    .hamburger {
        display: block;
        cursor: pointer;
        width: 2.4em;
        height: 2.4em;
        background: none;
        border: none;
        position: absolute;
        right: 4em;
        top: 3em;
    }

    .hamburger span {
        position: absolute;
        width: 1.6em;
        height: 0.2em;
        background-color: black;
        transition: transform 0.3s ease, opacity 0.3s ease;
    }

    /* Closed menu hamburger layout */

    /*Top line */
    .hamburger span:nth-child(1) {
        transform: translateY(-0.4em);
    }

    /* Bottom line */
    .hamburger span:nth-child(2) {
        transform: translateY(0.4em);
    }

    /* Open menu: top and bottom spans transform into "X" */
    .menu.open .hamburger span:nth-child(1) {
        transform: rotate(45deg);
    }

    /* Middle span disappears */
    .menu.open .hamburger span:nth-child(2) {
        display: none;
    }

    .menu.open .hamburger span:nth-child(3) {
        transform: rotate(-45deg);
    }

    /* Show menu when toggled */
    .menu.open ul {
        margin-top: 2em;
        display: flex;
        width: 100%;
    }

    .brand-name {
        font-size: 1.2em;
    }
}

/* Footer */

footer p {
    font-size: 1em;
    text-align: center;
}

